Added bot configue

--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "eslint-config-next": "15.2.2",
     "tailwindcss": "^4",
     "typescript": "^5"
-  }
+  },
+  "scripts": {
+      "bot:dev": "ts-node bot/index.ts"
+    }
 }
